@@ -610,6 +610,9 @@ Release 0.22.0 - Unreleased
     HDFS-1473. Refactor storage management into separate classes than fsimage
     file reading/writing. (Todd Lipcon via eli)
 
+    HDFS-1071. savenamespace should write the fsimage to all configured 
+    fs.name.dir in parallel (Dmytro Molkov via jghoman)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
